--- a/app/views/teams/edit_team.erb
+++ b/app/views/teams/edit_team.erb
@@ -1,9 +1,17 @@
-<p>
-  <%= @team.content %>
-</p>
+<p><%= @team.qb %></p>
+<p><%= @team.rb %></p>
+<p><%= @team.wr %></p>
+<p><%= @team.te %></p>
+<p><%= @team.defense %></p>
+<p><%= @team.kicker %></p>
 
 <form action="/teams/<%= @team.id %>" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
-  <input type="text" name="content" value="content">
+  <input type="text" name="qb" value="qb">
+  <input type="text" name="rb" value="rb">
+  <input type="text" name="wr" value="wr">
+  <input type="text" name="te" value="te">
+  <input type="text" name="defense" value="defense">
+  <input type="text" name="kicker" value="kicker">
   <input type="submit" value="submit">
 </form>
