--- a/app/views/teams/show_team.erb
+++ b/app/views/teams/show_team.erb
@@ -1,17 +1,30 @@
-<p>
-  <%= @team.content %>
-</p>
+<p><%= @team.qb %></p>
+<p><%= @team.rb %></p>
+<p><%= @team.wr %></p>
+<p><%= @team.te %></p>
+<p><%= @team.defense %></p>
+<p><%= @team.kicker %></p>
 
 <h2>Edit Team</h2>
 <form action="/teams/<%=@team.id%>" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
-  <input type="text" name="content">
+  <input type="text" name="qb" value="qb">
+  <input type="text" name="rb" value="rb">
+  <input type="text" name="wr" value="wr">
+  <input type="text" name="te" value="te">
+  <input type="text" name="defense" value="defense">
+  <input type="text" name="kicker" value="kicker">
   <input type="submit" value="submit">
 </form>
 
 <h2>Delete Team</h2>
 <form action="/teams/<%=@team.id%>/delete" method="post">
   <input id="hidden" type="hidden" name="_method" value="delete">
-  <input type="text" name="content">
-  <input type="submit" value="Delete Tweet">
+  <input type="text" name="qb" value="qb">
+  <input type="text" name="rb" value="rb">
+  <input type="text" name="wr" value="wr">
+  <input type="text" name="te" value="te">
+  <input type="text" name="defense" value="defense">
+  <input type="text" name="kicker" value="kicker">
+  <input type="submit" value="Delete Team">
 </form>
