--- a/app/views/teams/create_team.erb
+++ b/app/views/teams/create_team.erb
@@ -1,6 +1,6 @@
 <h1>Create a new Team</h1>
 
-<form action="/tweets" method="POST">
+<form action="/teams" method="POST">
 
   <label>QB:</label>
   <br></br>
