--- a/app/views/teams/teams.erb
+++ b/app/views/teams/teams.erb
@@ -1,8 +1,12 @@
 <h1>Welcome, <%= current_user.username %></h1>
 <ul>
   <%@teams.each do |team|%>
-  <li><%=team.user%></li>
-  <li><%=team.roster%></li>
+  <li><%=team.qb%></li>
+  <li><%=team.rb%></li>
+  <li><%=team.wr%></li>
+  <li><%=team.te%></li>
+  <li><%=team.defense%></li>
+  <li><%=team.kicker%></li>
   <a href="/team/<%= team.id %>"></a>
   <%end%>
 </ul>
