--- a/app/views/teams/create_team.erb
+++ b/app/views/teams/create_team.erb
@@ -1,40 +1,32 @@
-<h1>Create a new Team</h1>
+<h1>Create a New Team</h1>
 
 <form action="/teams" method="POST">
 
-  <label>QB:</label>
+  <label>Team Name:</label>
+  <input  type="text" name="name" id="name"></input>
   <br></br>
-  <label>qb:</label>
+
+  <label>QB:</label>
   <input  type="text" name="qb" id="qb"></input>
   <br></br>
 
   <label>RB:</label>
-  <br></br>
-  <label>rb:</label>
   <input  type="text" name="rb" id="rb"></input>
   <br></br>
 
   <label>WR:</label>
-  <br></br>
-  <label>wr:</label>
   <input  type="text" name="wr" id="wr"></input>
   <br></br>
 
   <label>TE:</label>
-  <br></br>
-  <label>te:</label>
   <input  type="text" name="te" id="te"></input>
   <br></br>
 
   <label>Defense:</label>
-  <br></br>
-  <label>defense:</label>
   <input  type="text" name="defense" id="defense"></input>
   <br></br>
 
   <label>Kicker:</label>
-  <br></br>
-  <label>kicker:</label>
   <input  type="text" name="kicker" id="kicker"></input>
   <br></br>
 
