--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,7 +1,10 @@
-<h1>Log In Below:</h1>
+<h1>Sign Up Below:</h1>
 <form action="/signup" method="post">
   username <input type="text" name="username" id="username">
+  <br></br>
   email <input type="text" name="email" id="email">
+  <br></br>
   password <input type="password" name="password" id="password">
-  Signup <input type="submit" name="Signup" id="Signup">
+  <br></br>
+  <input type="submit" name="Signup" id="Signup">
 </form>
