--- a/app/views/teams/edit_team.erb
+++ b/app/views/teams/edit_team.erb
@@ -1,17 +1,20 @@
-<p><%= @team.qb %></p>
-<p><%= @team.rb %></p>
-<p><%= @team.wr %></p>
-<p><%= @team.te %></p>
-<p><%= @team.defense %></p>
-<p><%= @team.kicker %></p>
+<h1><%= @team.name %></h1>
+<p>Quarterback: <%= @team.qb %></p>
+<p>Running Back: <%= @team.rb %></p>
+<p>Wide Receiver: <%= @team.wr %></p>
+<p>Tight End: <%= @team.te %></p>
+<p>Defense: <%= @team.defense %></p>
+<p>Kicker: <%= @team.kicker %></p><br></br>
 
-<form action="/teams/<%= @team.id %>" method="post">
+<h2>Edit Team</h2>
+<form action="/teams/<%=@team.id%>" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
-  <input type="text" name="qb" value="qb">
-  <input type="text" name="rb" value="rb">
-  <input type="text" name="wr" value="wr">
-  <input type="text" name="te" value="te">
-  <input type="text" name="defense" value="defense">
+  <input type="text" name="name" value="name"><br></br>
+  <input type="text" name="qb" value="qb"><br></br>
+  <input type="text" name="rb" value="rb"><br></br>
+  <input type="text" name="wr" value="wr"><br></br>
+  <input type="text" name="te" value="te"><br></br>
+  <input type="text" name="defense" value="defense"><br></br>
   <input type="text" name="kicker" value="kicker">
   <input type="submit" value="submit">
 </form>
