--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
 <h1>Log In Below:</h1>
 <form action="/login" method="post">
-  username <input type="text" name="username" id="username">
-  email <input type="text" name="email" id="email">
-  password <input type="text" name="password" id="password">
-  Log In <input type="submit" name="submit" id="submit">
+  username <input type="text" name="username" id="username"><br></br>
+  email <input type="text" name="email" id="email"><br></br>
+  password <input type="text" name="password" id="password"><br></br>
+  <input type="submit" name="submit" id="submit">
 </form>
