--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,3 @@
-<h1>Welcome to Fantasy Football Team Organizer</h1>
+<h1>Welcome to Fantasy Football</h1>
 <a href="/login">Login</a><br></br>
 <a href="/signup">Sign Up</a><br></br>
