--- a/app/views/teams/create_team.erb
+++ b/app/views/teams/create_team.erb
@@ -30,6 +30,6 @@
   <input  type="text" name="kicker" id="kicker"></input>
   <br></br>
 
-  <input type="submit" value="submit" name="submit" id="submit">
+  <input type="submit" value="create_team">
 
 </form>
