--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,8 @@
-<h1>Welcome to Fantasy Football</h1>
+<!-- <h1>Welcome to Fantasy Football</h1>
 <a href="/login">Login</a><br></br>
-<a href="/signup">Sign Up</a><br></br>
+<a href="/signup">Sign Up</a><br></br> -->
+
+<h1>Welcome, <%= current_user.username %> to Fantasy Football!</h1>
+<a href="/teams">Teams in Your League</a><br></br>
+<a href="/teams/new">Create New Team</a><br></br>
+<a href="/users">Owner Index</a><br></br>
