--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,6 +7,12 @@
 
   <body>
     <div class="container">
+      <% if logged_in? %>
+        <form action="/session" method="post">
+          <input type="hidden" name="_method" value="delete" />
+          <input type="submit" value="logout">
+        </form>
+      <% end %>
       <%= yield %>
     </div>
   </body>
