--- a/app/views/session/login.erb
+++ b/app/views/session/login.erb
@@ -1,7 +1,8 @@
 <h1>Log In Below:</h1>
-<form action="/login" method="post">
+<form action="/session" method="post">
   username <input type="text" name="username" id="username"><br></br>
   email <input type="text" name="email" id="email"><br></br>
   password <input type="text" name="password" id="password"><br></br>
   <input type="submit" name="submit" id="submit">
 </form>
+<a href="/users/signup">Signup</a><br></br>
