--- a/app/views/teams/edit_team.erb
+++ b/app/views/teams/edit_team.erb
@@ -9,12 +9,12 @@
 <h2>Edit Team</h2>
 <form action="/teams/<%=@team.id%>" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
-  <input type="text" name="name" value="name"><br></br>
-  <input type="text" name="qb" value="qb"><br></br>
-  <input type="text" name="rb" value="rb"><br></br>
-  <input type="text" name="wr" value="wr"><br></br>
-  <input type="text" name="te" value="te"><br></br>
-  <input type="text" name="defense" value="defense"><br></br>
-  <input type="text" name="kicker" value="kicker">
+  <input type="text" name="team[name]" value="name"><br></br>
+  <input type="text" name="team[qb]" value="qb"><br></br>
+  <input type="text" name="team[rb]" value="rb"><br></br>
+  <input type="text" name="team[wr]" value="wr"><br></br>
+  <input type="text" name="team[te]" value="te"><br></br>
+  <input type="text" name="team[defense]" value="defense"><br></br>
+  <input type="text" name="team[kicker]" value="kicker">
   <input type="submit" value="submit">
 </form>
